--- a/findly-builder/src/app/components/team-management/team-management.component.scss
+++ b/findly-builder/src/app/components/team-management/team-management.component.scss
@@ -161,7 +161,7 @@
       display: none;
     }
     &.selected {
-      background: #f3f8ff;
+      background: #F8F9FA;
       border-radius: 4px;
       border: 0;
       .content {
@@ -172,7 +172,7 @@
         }
       }
       &:hover {
-        background: #f3f8ff;
+        background: #F8F9FA;
       }
     }
     .content {
@@ -443,5 +443,87 @@
   }
   .ps__rail-x {
     display: none !important;
+  }
+}
+:host ::ng-deep .example-chip-list {
+  width: 100%;
+  .mat-form-field-wrapper{
+      padding: 0;
+      .mat-form-field-flex{
+          .mat-form-field-infix{
+              margin: 0;
+              padding: 0;
+              border: 0;
+              .mat-chip-list{
+                  .mat-chip-list-wrapper{
+                      border-radius: 3px;
+                      border: solid 1px #BDC1C6;       
+                      margin: 0;
+                      font-family: Inter !important;
+                      .mat-input-element{
+                          margin: 0;
+                          border: 0;
+                          height: 36px;
+                          padding-left: 10px;
+                          &:focus{   
+                              border: 0 !important;                             
+                              outline: 0 !important;
+                          }
+                      }
+                      .mat-chip{
+                          border-radius: 4px;
+                          background-color: #EFF0F1;
+                          padding: 0px 9px;
+                          margin: 3px 0px 3px 3px;
+                          min-height: 30px;
+                          &:hover{
+                              &::after{
+                                  opacity: 0.09;
+                              }
+                          }
+                          .mat-val{
+                              color: #9B9B9B;
+                              font-size: 12px;
+                              font-weight: bold;
+                          }
+                          .mat-icon{
+                              width: auto;
+                              height: auto;
+                              opacity: 0.8;
+                              img{
+                                  width: 11px;
+                                  height: 11px;
+                                  vertical-align: middle;
+                                  position: relative;
+                                  top: -1px;
+                                  left: 2px;
+                              }
+                          }
+                      }                        
+                  }                        
+              }
+          }
+      }                        
+  }
+  .mat-form-field-label-wrapper{
+      padding: 0;
+      height: 36px;
+      top: 5px;
+      .mat-form-field-label{
+          margin: 0;
+          top: 6px;
+          left: 10px;
+          span{
+              font-weight: 400 !important;
+              color: #9B9B9B !important;
+          }
+      }
+  }
+  .mat-form-field-subscript-wrapper{
+      margin: 0;
+      top: 0;
+  }
+  .mat-form-field-underline{
+      display: none;
   }
 }
